fixed cat transitino on iphone scree size

--- a/catfades.css
+++ b/catfades.css
@@ -10,7 +10,8 @@
 }
 
 #cats img{
-    height: 80vh;
+    max-height: 80vh;
+    max-width: 50vw;
     position: absolute;
 }
 
